added email verifation and reset password
